--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             </div>
         </div>
         <hr>
+        <div id="article">
         <div class="article_container">
             <h1>Why Code Now?</h1>
                 <hr>
@@ -34,18 +35,14 @@
                         
                 <p>Integer nec efficitur libero. Phasellus vitae rutrum lacus, eget bibendum mi. Vestibulum nibh arcu, vehicula vulputate ante quis, consectetur sollicitudin erat. Nam fermentum aliquam neque maximus congue. Donec molestie dolor in purus rhoncus vestibulum quis non enim. Nullam lorem risus, mattis in fringilla nec, dictum et libero. Donec porttitor rutrum massa, sed dapibus lectus mattis vestibulum. Integer dignissim ligula sit amet felis congue convallis. Maecenas lorem ligula, facilisis eu ex quis, dignissim interdum nisl. Sed et suscipit felis. Aenean eu eros neque. In hac habitasse platea dictumst.</p>
         </div>
+        </div>
         <div class="social_buttons_container">
             <div style="fa-3x">
-                    <h4>Who Am I Professionally?</h4>
+                    <h4>Connect With Me</h4>
                     <hr>
-                    <a href=""><i class="fab fa-youtube-square" style= "color:#ff250b;"></i></a>                     
-                    <a href=""></a><i class="fab fa-linkedin"  style= "color:#0078B5;"></i></i></a>
-                    <a href=""></a><i class="fab fa-blogger"  style= "color:#ff250b;"></i></i></a>
-                    <br>
-                    <h4>Who Am I Personally?</h4>
-                    <a href=""></a><i class="fab fa-snapchat-square" style= "color:#fefc00;"></i></a>
-                    <a href=""></a><i class="fab fa-twitter-square" style= "color:#1da1f2;"></i></a>
-                    <a href=""></a><i class="fab fa-facebook-square" style= "color:#4267b2;"></i></a>
+                    <a href="https://www.youtube.com/channel/UCjtMX3KLl417tqyd2PEpVyQ" target="_blank"><i class="fab fa-youtube-square" style= "color:#FF250B";></i></a>                    
+                    <a href="https://www.linkedin.com/in/monique-hawkins/" target="_blank"><i class="fab fa-linkedin" style= "color:#0078B5";></i></a>
+                    <a href="https://medium.com/@switchingtocode/100-days-of-code-and-beyond-96f49dd3a994?fbclid=IwAR0bS3tfDQywhBAnsAsDPkuACc8tblgIipKTy4UODSNDlSzkN95gqIjogiQ "target="_blank";><i class="fab fa-blogger"  style= "color:#ff250b;"></i></a>
         </div>
         </div> 
     </div>
