Investigating divs and rearranging the page.

--- a/index.html
+++ b/index.html
@@ -1,32 +1,35 @@
 <!DOCTYPE html>
 <html>
-    <head>
-            <meta http-equiv="content-type" content="text/html;" charset="UTF-8">
-        <title>Monique Hawkins| App Developer Portfolio</title>
-	<!--Stylesheets link-->
-	    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <head> 
+        <!--Priority Meta tags-->
+        <meta charset="UTF-8">
+        <meta http-equiv="x-ua-compatible" content="ie=edge; chrome=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0,  user-scalable=no">
+        <meta name="Digital Portforlio and Resume">
+        <title>Monique Hawkins  | App Developer Portfolio</title>
+	    <!--Stylesheets link-->
+	    <link rel="stylesheet" type="text/css" href="assets/reset.css">
+        <link rel="stylesheet" type="text/css" href="assets/style.css">
+        <link href="https://fonts.googleapis.com/css?family=Manuale|Montserrat" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
         <link href="/your-path-to-fontawesome/css/fontawesome.css" rel="stylesheet">
         <link href="/your-path-to-fontawesome/css/brands.css" rel="stylesheet">
         <link href="/your-path-to-fontawesome/css/solid.css" rel="stylesheet">
     </head>
     <body>
-        <div id="portfolio">
-        <div class="header_container">
-            <div style="background-color: blue">
-            <h1>Monique Hawkins|App Developer</h1>
+        <div class="navbar_container">
+            <nav>
+                <h1>Monique Hawkins</h1>
+                <a href="./Portfolio/ConnectionsandComments.html"><i class="fas fa-comments"></i>Feedback</a>
+                <a href="./Portfolio/Connection.html"><i class="fas fa-user-friends"></i>Connect</a>
+                <a href="./Portfolio/Portfolio.html"><i class="fas fa-book-open"></i>Portfolio</a> 
+                <a class="active" href="./Portfolio/about.html"><i class="fas fa-portrait"></i>About</a>
+            </nav>
             </div>
-            <div class="pagelinks">
-            <a href="./Portfolio/about.html"><h6>About</h6></a>
-            <a href="./Portfolio/Portfolio.html"><h6>|Portfolio</h6></a>
-            <a href="./Portfolio/ConnectionsandComments.html"><h6>|Connections and Comments</h6></a>
-            </div>
-        </div>
         <hr>
         <div id="article">
         <div class="article_container">
-            <h1>Why Code Now?</h1>
+                <strong><h2>Why Code Now?</h2></strong>
                 <hr>
                 <img src="../Portfolio/assets/images/moniqueraw.jpg" alt="picture of monique" align=left border=20px width=200px height=250px;>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vel nibh tincidunt neque imperdiet porttitor. Ut egestas commodo sem quis aliquam. Duis ipsum lorem, finibus vitae finibus volutpat, faucibus in enim. Nam id eros ut nibh pretium congue. Sed non finibus diam, nec aliquet nulla. Donec et urna ut quam malesuada sagittis. Suspendisse sit amet velit mattis, euismod nulla sit amet, consequat neque. Mauris condimentum feugiat justo vitae laoreet. Ut rutrum ante nec felis eleifend molestie.</p>
@@ -36,20 +39,22 @@
                 <p>Integer nec efficitur libero. Phasellus vitae rutrum lacus, eget bibendum mi. Vestibulum nibh arcu, vehicula vulputate ante quis, consectetur sollicitudin erat. Nam fermentum aliquam neque maximus congue. Donec molestie dolor in purus rhoncus vestibulum quis non enim. Nullam lorem risus, mattis in fringilla nec, dictum et libero. Donec porttitor rutrum massa, sed dapibus lectus mattis vestibulum. Integer dignissim ligula sit amet felis congue convallis. Maecenas lorem ligula, facilisis eu ex quis, dignissim interdum nisl. Sed et suscipit felis. Aenean eu eros neque. In hac habitasse platea dictumst.</p>
         </div>
         </div>
+        <br>
+        <br>
+
         <div class="social_buttons_container">
-            <div style="fa-3x">
+            <div style:"fa-3x">
                     <h4>Connect With Me</h4>
                     <hr>
                     <a href="https://www.youtube.com/channel/UCjtMX3KLl417tqyd2PEpVyQ" target="_blank"><i class="fab fa-youtube-square" style= "color:#FF250B";></i></a>                    
                     <a href="https://www.linkedin.com/in/monique-hawkins/" target="_blank"><i class="fab fa-linkedin" style= "color:#0078B5";></i></a>
                     <a href="https://medium.com/@switchingtocode/100-days-of-code-and-beyond-96f49dd3a994?fbclid=IwAR0bS3tfDQywhBAnsAsDPkuACc8tblgIipKTy4UODSNDlSzkN95gqIjogiQ "target="_blank";><i class="fab fa-blogger"  style= "color:#ff250b;"></i></a>
-        </div>
+            </div>
         </div> 
     </div>
-
-    </body>
     <div class="footer">
         <p>&copy; Monique Hawkins</p>
     </div>
 </div>
+</body>
 </html>
