--- a/index.html
+++ b/index.html
@@ -7,28 +7,36 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0,  user-scalable=no">
         <meta name="Digital Portforlio and Resume">
         <title>Monique Hawkins  | App Developer Portfolio</title>
-	    <!--Stylesheets link-->
-	    <link rel="stylesheet" type="text/css" href="assets/reset.css">
-        <link rel="stylesheet" type="text/css" href="assets/style.css">
+        <link rel="icon" type="image/svg+xml" href="assets/images/logofavi.png">
+        <!--Stylesheets link-->
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">        
+        <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
         <link href="https://fonts.googleapis.com/css?family=Manuale|Montserrat" rel="stylesheet">
+        <!--Import Google Icon Font-->
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <!--Import materialize.css-->
+        <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-        <link href="/your-path-to-fontawesome/css/fontawesome.css" rel="stylesheet">
+        <link href="/your-patauto;h-to-fontawesome/css/fontawesome.css" rel="stylesheet">
         <link href="/your-path-to-fontawesome/css/brands.css" rel="stylesheet">
         <link href="/your-path-to-fontawesome/css/solid.css" rel="stylesheet">
     </head>
-    <body>
-        <div class="navbar_container">
+    <body> 
+
+        <div class="container1">
             <nav>
-                <h1>Monique Hawkins</h1>
-                <a href="./Portfolio/ConnectionsandComments.html"><i class="fas fa-comments"></i>Feedback</a>
-                <a href="./Portfolio/Connection.html"><i class="fas fa-user-friends"></i>Connect</a>
-                <a href="./Portfolio/Portfolio.html"><i class="fas fa-book-open"></i>Portfolio</a> 
-                <a class="active" href="./Portfolio/about.html"><i class="fas fa-portrait"></i>About</a>
+                <img src="assets/images/logo_mh.svg"><i class="navbar"></i></a>
+                <ul class="menu">
+                    </li><a class="active" href="./Portfolio/about.html"><i class="fas fa-portrait"></i> About</a></li>
+                    <li><a href="./Portfolio/Portfolio.html"><i class="fas fa-book-open"></i> Portfolio</a></li> 
+                    <li><a href="./Portfolio/Connection.html"><i class="fas fa-user-friends"></i> Connect</a></li>
+                    <li><a href="./Portfolio/ConnectionsandComments.html"><i class="fas fa-comments"></i> Feedback</a></li>
+                </ul>
             </nav>
             </div>
         <hr>
         <div id="article">
-        <div class="article_container">
+        <div class="container2">
                 <strong><h2>Why Code Now?</h2></strong>
                 <hr>
                 <img src="../Portfolio/assets/images/moniqueraw.jpg" alt="picture of monique" align=left border=20px width=200px height=250px;>
@@ -42,7 +50,7 @@
         <br>
         <br>
 
-        <div class="social_buttons_container">
+        <div class="container3">
             <div style:"fa-3x">
                     <h4>Connect With Me</h4>
                     <hr>
@@ -56,5 +64,7 @@
         <p>&copy; Monique Hawkins</p>
     </div>
 </div>
+<!--JavaScript at end of body for optimized loading-->
+<script type="text/javascript" src="js/materialize.min.js"></script>
 </body>
 </html>
