--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
 
         <div class="container1">
             <nav>
-                <img src="assets/images/logo_mh.svg"><i class="navbar"></i></a>
-                <ul class="menu">
+                <img src="assets/images/mh_logo.png"><i class="navbar"></i></a>
+                <ul id="nav">
                     </li><a class="active" href="./Portfolio/about.html"><i class="fas fa-portrait"></i> About</a></li>
                     <li><a href="./Portfolio/Portfolio.html"><i class="fas fa-book-open"></i> Portfolio</a></li> 
                     <li><a href="./Portfolio/Connection.html"><i class="fas fa-user-friends"></i> Connect</a></li>
                     <li><a href="./Portfolio/ConnectionsandComments.html"><i class="fas fa-comments"></i> Feedback</a></li>
                 </ul>
             </nav>
-            </div>
+        </div>
         <hr>
         <div id="article">
         <div class="container2">
-                <strong><h2>Why Code Now?</h2></strong>
+                <strong><h1>Why Code Now?</h1></strong>
                 <hr>
                 <img src="../Portfolio/assets/images/moniqueraw.jpg" alt="picture of monique" align=left border=20px width=200px height=250px;>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vel nibh tincidunt neque imperdiet porttitor. Ut egestas commodo sem quis aliquam. Duis ipsum lorem, finibus vitae finibus volutpat, faucibus in enim. Nam id eros ut nibh pretium congue. Sed non finibus diam, nec aliquet nulla. Donec et urna ut quam malesuada sagittis. Suspendisse sit amet velit mattis, euismod nulla sit amet, consequat neque. Mauris condimentum feugiat justo vitae laoreet. Ut rutrum ante nec felis eleifend molestie.</p>
@@ -63,8 +63,8 @@
     <div class="footer">
         <p>&copy; Monique Hawkins</p>
     </div>
-</div>
+    </div>
 <!--JavaScript at end of body for optimized loading-->
-<script type="text/javascript" src="js/materialize.min.js"></script>
+    <script type="text/javascript" src="js/materialize.min.js"></script>
 </body>
 </html>
